--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script type="module" src="https://cdn.skypack.dev/twind/shim"></script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
